Fixed issue with the background covering all of the screen;

--- a/Frontend/GoatCoachWeb/src/index.css
+++ b/Frontend/GoatCoachWeb/src/index.css
@@ -4,17 +4,20 @@ html {
 
 body {
   min-height: 100%;
-  display: flex;
-  flex-direction: column;
+  min-width: 100%;
   margin: 0px;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
 }
 
 #root {
-  height: 100%;
-  max-height: 100%;
-  flex-direction: column;
   flex: 1;
+  min-height: 100%;
+  min-width: 100%;
+  margin: 0px;
+  padding: 0px;
   display: flex;
-  padding: 0;
-  margin: 0;
+  flex-direction: column;
+  align-items: stretch;
 }
